# cogstack-leadgen

./: .gitignore  CLAUDE.md  PRD.md  SETUP_GUIDE.md  backfill_batch_relations.py  create_b2c_database.py  create_claire_prospects_db.py  create_notion_databases.py  crontab-b2c.txt  docker-compose.yml  main.py  n8n_b2c_code_node.js  n8n_b2c_workflow.json  n8n_code_node.js  n8n_lead_ingestion_workflow.json  notion_config.json  pyproject.toml  test_b2c_webhook.py  test_gumtree_scrapling.py  test_webhook.py
.claude/: PRD.md  settings.json  settings.local.json
.config/: PRD.md
ClaireLeads/: CarTrackSubmission2.xlsx  (+1 more)
apps/ui/: Dockerfile  README.md  pyproject.toml
apps/ui/src/cogstack_ui/: config.py  main.py
apps/ui/src/cogstack_ui/baileys/: client.py
apps/ui/src/cogstack_ui/notion/: client.py  queries.py  schema.py  writes.py
apps/ui/src/cogstack_ui/routes/: dashboard.py  outreach.py  partials.py  prospects.py
apps/ui/src/cogstack_ui/templates/: _macros.html  base.html  dashboard.html
apps/ui/src/cogstack_ui/templates/outreach/: _batch_status_partial.html  batch_not_found.html  batch_queued.html  batch_results.html  batch_status.html  batches_index.html  preview.html
apps/ui/src/cogstack_ui/templates/prospects/: detail.html  list.html
apps/ui/src/cogstack_ui/templates/prospects/partials/: cartrack_confirm.html  cartrack_result.html  wa_lookup_result.html  wa_send_confirm.html  wa_send_result.html
apps/ui/src/cogstack_ui/utils/: phone.py
apps/ui/src/cogstack_ui/whatsapp/: batches.py  eligibility.py  state.py  templates.py  worker.py
(+59 files in other folders)
